# rapid_reports_ai

./: .gitignore  ASYNC_VALIDATION_PLAN.md  AUTO_REPORT_GENERATION_SUMMARY.md  DOCUMENTATION.md  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  SETUP.md  STRUCTURED_TEMPLATE_ARCHITECTURAL_ANALYSIS.md  TESTING_RAILWAY_MIGRATIONS.md  nixpacks.toml  railway.json  start.sh
backend/: .env.example  .gitignore  Procfile  README.md  SETUP.md  add_template_config_column.py  delete_all_templates.py  fix_migration_state.py  fix_template_content_column.py  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt  run_migration.py  run_migrations.py  test_cache_functionality.py  test_db_connection.py  verify_approval_gate.py  verify_migration_test.py
backend/migrations/: env.py
backend/migrations/versions/: 20260103094159_rebuild_template_schema.py  20260108230525_create_enhancement_cache_table.py  20260228120000_add_audit_tables.py  20260307120000_remove_deepgram_from_settings.py  20260330120000_add_guideline_cache.py  (+20 more)
backend/scripts/: audit_and_fix_organization_defaults.py  audit_and_fix_template_drift.py  copy_template_to_user.py  precompute_tnm_embeddings.py  prefetch_pipeline_server.py  prefetch_pipeline_ui.html  quick-eval.sh  simulate_guideline_fetch_flow.py  test_tnm_search.py
backend/test_cases/: analyser_suite.json  quick_eval.json  stress_targeted.json
backend/tests/: conftest.py  test_admin_email.py  test_admin_routes.py  test_admin_signing.py  test_auth_flow.py  test_chat_prompt.py  test_migration_approval_gate.py  test_smoke.py  test_user_model.py
(+168 files in other folders)
